Updated the specifications with openapi docs
